--- a/CopyTextComponent/PCFCopyTextComponent/strings/PCFCopyTextComponent.1033.resx
+++ b/CopyTextComponent/PCFCopyTextComponent/strings/PCFCopyTextComponent.1033.resx
@@ -129,12 +129,53 @@
     <value>PCFCopyTextComponent</value>
     <comment>Display text for PCFCopyTextComponent description</comment>
   </data>
-  <data name="value_Display_Key" xml:space="preserve">
+  <data name="Value_Display_Key" xml:space="preserve">
     <value>Value</value>
     <comment>Display text for Value</comment>
   </data>
-  <data name="value_Desc_Key" xml:space="preserve">
+  <data name="Value_Desc_Key" xml:space="preserve">
     <value>Value</value>
     <comment>Display text for Value description</comment>
   </data>
+  <data name="Mode_Display_Key" xml:space="preserve">
+    <value>Mode</value>
+    <comment>Display text for Mode</comment>
+  </data>
+  <data name="Mode_Desc_Key" xml:space="preserve">
+    <value>Mode</value>
+    <comment>Display text for Mode description</comment>
+  </data>
+  <data name="MaxLength_Display_Key" xml:space="preserve">
+    <value>MaxLength</value>
+    <comment>Display text for MaxLength</comment>
+  </data>
+  <data name="MaxLength_Desc_Key" xml:space="preserve">
+    <value>MaxLength</value>
+    <comment>Display text for MaxLength description</comment>
+  </data>
+  <data name="Mode_SingleLine_Display_Key" xml:space="preserve">
+    <value>SingleLine</value>
+    <comment>Display text for SingleLine</comment>
+  </data>
+  <data name="Mode_SingleLine_Desc_Key" xml:space="preserve">
+    <value>SingleLine</value>
+    <comment>Display text for SingleLine description</comment>
+  </data>
+  <data name="Mode_MultiLine_Display_Key" xml:space="preserve">
+    <value>MultiLine</value>
+    <comment>Display text for MultiLine</comment>
+  </data>
+  <data name="Mode_MultiLine_Desc_Key" xml:space="preserve">
+    <value>MultiLine</value>
+    <comment>Display text for MultiLine description</comment>
+  </data>
+  <data name="ReadOnly_Display_Key" xml:space="preserve">
+    <value>ReadOnly</value>
+    <comment>Display text for ReadOnly</comment>
+  </data>
+  <data name="ReadOnly_Desc_Key" xml:space="preserve">
+    <value>ReadOnly</value>
+    <comment>Display text for ReadOnly description</comment>
+  </data>
+
 </root>
